--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -86,3 +86,13 @@ h2{
   float: right;
 }
 
+.valid-feedback.feedback-icon,
+.invalid-feedback.feedback-icon {
+    position: absolute;
+    width: auto;
+    bottom: 10px;
+    right: 10px;
+    margin-top: 0;
+    
+}
+
