--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -28,6 +28,15 @@
             </div>
           </div>
         </div>
+        <div class="form-group" show-errors>
+            <label class="control-label" for="side">Side</label>
+            <div class="controls">
+              <input class="form-control" type="text" name="side" ng-model="user.side" id="side" ng-list required />
+              <div ng-messages="userForm.side.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">At least one side is required.</p>
+              </div>
+            </div>
+          </div>
         <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
         </div>
