--- a/modules/users/client/views/authentication/dashboard.client.view.html
+++ b/modules/users/client/views/authentication/dashboard.client.view.html
@@ -1,37 +1,43 @@
 <div style="margin-top: 30px; margin-bottom: 30px;" ng-controller="HomeController">
 
+                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
+
 <table>
     <tr>
         <td>
-                <md-card class="box">
+                <md-card class="showcase-item__link" >
                     <md-card-content>
-                    <h4><center>On joining 2 pair</center></h4><br>
-                    <h5>Get 500 cashback<br>and <br>DINNER SET</h5>
+                    <!-- <h4><center>On joining 2 pair</center></h4><br>
+                    <h5>Get 500 cashback<br>and <br>DINNER SET</h5> -->
+                    
+                    <img ng-src="/modules/users/client/img/offer/dinner_set.jpg">
                    </md-card-content>
                     <md-card-footer>
-                    <a class="btn btn-default b" ui-sref="addmember">JOIN NOW</a>
+                    <!-- <a class="btn btn-default b" ui-sref="addmember">2 Pair</a> -->
                      </md-card-footer>
                     </md-card>
     </td>
     <td>
-            <md-card class="box">
+            <md-card class="showcase-item__link">
                 <md-card-content>
-                        <h4><center>On joining 25 pair</center></h4><br>
-                        <h5>Get 5000 cashback<br>and <br>MOBILE</h5>
+                        <!-- <h4><center>On joining 25 pair</center></h4><br>
+                        <h5>Get 5000 cashback<br>and <br>MOBILE</h5> -->
+                        <img ng-src="/modules/users/client/img/offer/mobile.jpg">
                </md-card-content>
                 <md-card-footer>
-                        <a class="btn btn-default b" ui-sref="addmember">JOIN NOW</a>
+                        <a class="btn btn-default b" ui-sref="addmember">25 Pair</a>
                  </md-card-footer>
                 </md-card>
 </td>
 <td>
         <md-card class="box">
             <md-card-content>
-                    <h4><center>On joining 50 pair</center></h4><br>
-                    <h5>Get 7000 cashback<br>OR<br>BANGKOK TRIP</h5>
+                    <!-- <h4><center>On joining 50 pair</center></h4><br>
+                    <h5>Get 7000 cashback<br>OR<br>BANGKOK TRIP</h5> -->
+                    <img ng-src="/modules/users/client/img/offer/bankok_trip.jpg">
            </md-card-content>
             <md-card-footer>
-                    <a class="btn btn-default b" ui-sref="addmember">JOIN NOW</a>
+                    <a class="btn btn-default b" ui-sref="addmember">50 Pair</a>
              </md-card-footer>
             </md-card>
 </td>
@@ -41,35 +47,38 @@
             <td>
                     <md-card class="box">
                         <md-card-content>
-                        <h4><center>On 120 pair</center></h4><br>
-                        <h5>Get 10000 cashback<br>and <br>APPLE LAPTOP</h5>
+                        <!-- <h4><center>On 120 pair</center></h4><br>
+                        <h5>Get 10000 cashback<br>and <br>APPLE LAPTOP</h5> -->
+                        <img ng-src="/modules/users/client/img/offer/apple_laptop.jpg">
                        </md-card-content>
                         <md-card-footer>
-                                <a class="btn btn-default b" ui-sref="addmember">JOIN NOW</a>
+                                <a class="btn btn-default b" ui-sref="addmember">120 Pair</a>
                          </md-card-footer>
                         </md-card>
         </td>
         <td>
                 <md-card class="box">
                     <md-card-content>
-                    <h4><center>On making 500 pair</center></h4>
+                    <!-- <h4><center>On making 500 pair</center></h4>
                     <br>
-                    <h5>Get 25000 cashback<br>and <br>BULLET BIKE</h5>
+                    <h5>Get 25000 cashback<br>and <br>BULLET BIKE</h5> -->
+                    <img ng-src="/modules/users/client/img/offer/bullet_bike.jpg">
                    </md-card-content>
                     <md-card-footer>
-                     <a class="btn btn-default b" ui-sref="addmember">JOIN NOW</a>
+                     <a class="btn btn-default" ui-sref="addmember">500 Pair</a>
                      </md-card-footer>
                     </md-card>
     </td>
     <td>
             <md-card class="box">
                 <md-card-content>
-                <h4><center>On making 1010 pair</center></h4>
+                <!-- <h4><center>On making 1010 pair</center></h4>
                 <br>
-                <h5>Get 50000 cashback<br>and <br>ALTO CAR</h5>
+                <h5>Get 50000 cashback<br>and <br>ALTO CAR</h5> -->
+                <img ng-src="/modules/users/client/img/offer/alto_car.jpg">
                </md-card-content>
                 <md-card-footer>
-                 <a class="btn btn-default b" ui-sref="addmember">JOIN NOW</a>
+                 <a class="btn btn-default b" ui-sref="addmember">1010 Pair</a>
                  </md-card-footer>
                 </md-card>
 </td>
