--- a/modules/users/client/views/authentication/buy.client.view.html
+++ b/modules/users/client/views/authentication/buy.client.view.html
@@ -8,21 +8,22 @@
     <table>
     <tr>
         <td>
-        <md-card class="box">
+        <md-card class="showcase-item__link">
                 <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/tv24.png" />
                     <md-card-content>
                         <h3>TV 24"</h3>
                         <h4>PRICE: Rs.12000</h4>
                         <h5>EMI:Rs.1000</h5>
+                        <a class="btn btn-default b" ui-sref="#">BUY</a>
                     </md-card-content>
-                    <md-card-footer>
+                    <!-- <md-card-footer>
                      <a class="btn btn-default b" ui-sref="#">BUY</a>
-                    </md-card-footer>
+                    </md-card-footer> -->
                    </md-card>
     </td>
 
     <td>
-       <md-card class="box">
+       <md-card class="showcase-item__link">
                 <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/tv32.png" />
                     <md-card-content>
                         <h3>TV 32"</h3>
@@ -35,7 +36,7 @@
                    </md-card>
         </td>
         <td>
-                <md-card class="box">
+                <md-card class="showcase-item__link">
                         <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/tvsm.png" />
                             <md-card-content>
                                 <h3>TV 32" Smart</h3>
@@ -52,7 +53,7 @@
             </tr>
 
         <tr>
-            <td><md-card class="box">
+            <td><md-card class="showcase-item__link">
                 <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/tv42.png" />
                     <md-card-content>
                         <h3>TV 42"</h3>
@@ -67,7 +68,7 @@
 
     
              <td>
-                   <md-card class="box">
+                   <md-card class="showcase-item__link">
                 <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/tv42sm.png" />
                     <md-card-content>
                         <h3>TV 42 Smart"</h3>
@@ -81,7 +82,7 @@
     </td>
 
     <td>
-            <md-card class="box">
+            <md-card class="showcase-item__link">
                     <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/tv50.png" />
                         <md-card-content>
                             <h3>TV 50"</h3>
@@ -98,7 +99,7 @@
 
         <tr>
                 <td>
-                <md-card class="box">
+                <md-card class="showcase-item__link">
                         <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/sm50.png" />
                             <md-card-content>
                                 <h3>TV 50 Smart"</h3>
@@ -112,7 +113,7 @@
             </td>
         
             <td>
-               <md-card class="box">
+               <md-card class="showcase-item__link">
                         <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/tv55sm.png" />
                             <md-card-content>
                                 <h3>TV 55 Smart 4K"</h3>
@@ -125,7 +126,7 @@
                            </md-card>
                 </td>
                 <td>
-                        <md-card class="box">
+                        <md-card class="showcase-item__link">
                                 <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/sm65k.png" />
                                     <md-card-content>
                                         <h3>TV 65" Smart 4K</h3>
@@ -143,7 +144,7 @@
 
                     <tr>
                             <td>
-                            <md-card class="box">
+                            <md-card class="showcase-item__link">
                                     <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/ro.png" />
                                         <md-card-content>
                                             <h3>RO</h3>
@@ -157,7 +158,7 @@
                         </td>
                     
                         <td>
-                           <md-card class="box">
+                           <md-card class="showcase-item__link">
                                     <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/wm.png" />
                                         <md-card-content>
                                             <h3>WASHING MACHINE</h3>
@@ -170,7 +171,7 @@
                                        </md-card>
                             </td>
                             <td>
-                                    <md-card class="box">
+                                    <md-card class="showcase-item__link">
                                             <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/ref.png" />
                                                 <md-card-content>
                                                     <h3>REFRIGERATOR</h3>
@@ -189,7 +190,7 @@
 
     <tr>
             <td>
-            <md-card class="box">
+            <md-card class="showcase-item__link">
                     <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/ac.png" />
                         <md-card-content>
                             <h3>AC</h3>
@@ -203,7 +204,7 @@
         </td>
     
         <td>
-           <md-card class="box">
+           <md-card class="showcase-item__link">
                     <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/ac.png" />
                         <md-card-content>
                             <h3>AC(2 Ton)</h3>
@@ -216,7 +217,7 @@
                        </md-card>
             </td>
             <td>
-                    <md-card class="box">
+                    <md-card class="showcase-item__link">
                             <img alt="MEAN.JS" class="md-card-image" src="modules/core/client/img/brand/fan.png" />
                                 <md-card-content>
                                     <h3>CEILLING  FAN</h3>
