modified home page

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -31,10 +31,10 @@
         <a ui-sref="addproducts" class="d" style="color: rgb(17, 6, 78)">Add Products</a>
       </li>
       <li class="divider-vertical"></li> -->
-      <li ui-sref-active="active">
+      <!-- <li ui-sref-active="active">
         <a ui-sref="signup" class="d" style="color: rgb(17, 6, 78)">Sign up</a>
       </li>
-      <li class="divider-vertical"></li>
+      <li class="divider-vertical"></li> -->
       <li ui-sref-active="active">
         <a ui-sref="signin"  class="d" style="color: rgb(19, 17, 110)">Sign In</a>
       </li>
