--- a/modules/users/client/views/authentication/buy.client.view.html
+++ b/modules/users/client/views/authentication/buy.client.view.html
@@ -14,10 +14,10 @@
                         <h3>TV 24"</h3>
                         <h4>PRICE: Rs.12000</h4>
                         <h5>EMI:Rs.1000</h5>
-                        <a class="btn btn-default b" ui-sref="#">BUY</a>
+                        <!-- <a class="btn btn-default b" ui-sref="#">BUY</a> -->
                     </md-card-content>
                     <md-card-footer>
-                     <a class="btn btn-default b" ng-click="testNotification()">BUY</a>
+                     <a class="btn btn-default b" ng-click="testNotification()">BUY Test notify</a>
                     </md-card-footer>
                    </md-card>
     </td>
