--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -38,7 +38,7 @@
 </head>
 
 <body class="ng-cloak">
-  <header ng-include="'/modules/core/client/views/header.client.view.html'" class="navbar navbar-default" style="margin-bottom: 0px;"></header>
+  <header ng-include="'/modules/core/client/views/header.client.view.html'" class="navbar navbar-default" style="margin-bottom: 0px;height:55px"></header>
   <section class="" style="background: #e7e7e7;margin:0px">
     <section class="">
       {% block content %}{% endblock %}
