--- a/modules/users/client/views/authentication/dashboard.client.view.html
+++ b/modules/users/client/views/authentication/dashboard.client.view.html
@@ -1,4 +1,4 @@
-<div style="height: 500px;background: #e7e7e7" ng-controller="HomeController">
+<div style="background: #e7e7e7" ng-controller="HomeController">
 
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 
@@ -31,6 +31,7 @@
 <div class="col-md-12" style="background: #e7e7e7">
 <table  >
                 <tr ><h3>Gifts and Cashbak</h3></tr>
+                <hr style="color:#DDD;width:300px"></hr>
     <tr>
         <td>
               <md-card  class="showcase-item__link">
