--- a/modules/users/client/views/authentication/addmember.client.view.html
+++ b/modules/users/client/views/authentication/addmember.client.view.html
@@ -63,7 +63,8 @@
   
   
   <div ng-controller="AuthenticationController">
-    <form name="userForm" class="form-large" ng-submit="signup(userForm.$valid)" class="signin" novalidate autocomplete="off">
+    <div style="width: 100%;height: 100%;margin-top:20px">
+      <form name="userForm" class="form-large" ng-submit="signup(userForm.$valid)" class="signin" novalidate autocomplete="off">
         <fieldset>
             <fieldset>
           <h3 class="col-md-12 text-center">SPONSOR DETAILS</h3>  
@@ -270,6 +271,7 @@
   
               <fieldset>
       </form>
+    </div>
     </div>
   </div>
   
